# AutomaticBattleSimulation

./: .gitignore  README.md
SimulationServer/: Ball.cpp  Ball.h  CMakeLists.txt  GameConfig.h  NetworkManager.cpp  NetworkManager.h  SImulationServer.cpp  SimulationManager.cpp  SimulationManager.h
UnrealSimulation/: UnrealSimulation.sln  UnrealSimulation.uproject
UnrealSimulation/Config/: DefaultEngine.ini  DefaultGame.ini
UnrealSimulation/Content/: BP_BallSimulatorActor.uasset  BP_BallSimulatorPawn.uasset  NewMap.umap  NewMap_HLOD0_Instancing.uasset  NewMaterialInstanceConstant.uasset  NewMaterialLayerInstance.uasset  SimulationGM.uasset  Untitled.umap  Untitled_HLOD0_Instancing.uasset
UnrealSimulation/Content/Level/: SimulationMap.umap  SimulationMap_HLOD0_Instancing.uasset
UnrealSimulation/Content/UserInterface/: WBP_GameOver.uasset
UnrealSimulation/Content/__ExternalActors__/NewMap/0/0E/: E7UFHHQZ7B8TLAL6Y74JRC.uasset
UnrealSimulation/Content/__ExternalActors__/NewMap/0/2Y/: UYA7A5HTQTJSRWJ4MK2WT6.uasset
UnrealSimulation/Content/__ExternalActors__/NewMap/0/4M/: EE3LUXOWULAYGXN1IPS4S2.uasset
UnrealSimulation/Content/__ExternalActors__/NewMap/0/96/: KOGYIBL49BSS4WYIOO1YS5.uasset
UnrealSimulation/Content/__ExternalActors__/NewMap/0/BQ/: 39OTWHVDSI751PAH6731ID.uasset
UnrealSimulation/Source/: UnrealSimulation.Target.cs  UnrealSimulationEditor.Target.cs
UnrealSimulation/Source/UnrealSimulation/: BallSimulationActor.cpp  BallSimulationActor.h  UGameOverWidget.cpp  UGameOverWidget.h  UnrealSimulation.Build.cs  UnrealSimulation.cpp
(+358 files in other folders)
